// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label.js should render component with append slot and match snapshot 1`] = `
<label id="label-1" aria-hidden="true" class="label">
  <div class="label__wrapper">
    <div class="label__content__wrapper">
      <div class="label__content">Label</div>
    </div>Append slot
  </div>
</label>
`;

exports[`Label.js should render component with default slot and match snapshot 1`] = `
<label id="label-1" aria-hidden="true" class="label">
  <div class="label__wrapper">
    <div class="label__content__wrapper">
      <div class="label__content">Label</div>
    </div>
    <!---->
  </div>
</label>
`;

exports[`Label.js should render component with for prop and match snapshot 1`] = `
<label id="label-1" for="input-id" aria-hidden="false" class="label">
  <div class="label__wrapper">
    <div class="label__content__wrapper">
      <div class="label__content">Label</div>
    </div>
    <!---->
  </div>
</label>
`;

exports[`Label.js should render component with id and value prop and match snapshot 1`] = `
<label id="label-id" aria-hidden="true" class="label">
  <div class="label__wrapper">
    <div class="label__content__wrapper">
      <div class="label__content">Label</div>
    </div>
    <!---->
  </div>
</label>
`;
